--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -28,24 +28,34 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force: true
 
-      ##################################################
-
-      - run: |
-            gh api -i graphql -f query='
-            mutation {
-              createDiscussion(
-                input: {repositoryId: "R_kgDOG8xRxA", categoryId: "DIC_kwDOG8xRxM4CN9Zd",
-                  title: "${{github.event.issue.title}}", body: "具体内容请看：${{github.event.issue.html_url}}"
-                }
-              )
-              {
-                discussion {
-                  id
-                  number
-                  title
-                }
+  ##################################################
+  new-discussion:
+    runs-on: ubuntu-latest
+    - run: |
+        gh api -i graphql -f query='
+          mutation {
+            createDiscussion(
+              input: {repositoryId: "R_kgDOG8xRxA", categoryId: "DIC_kwDOG8xRxM4CN9Zd",
+                title: "${{github.event.issue.title}}", body: "具体内容请看：${{github.event.issue.html_url}}"
+              }
+            )
+            {
+              discussion {
+                id
+                number
+                title
               }
             }
-            '
+          }
+          '
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  issue-reply:
+    runs-on: ubuntu-latest
+    needs: new-discussion
+    steps:
+      - run: gh issue comment $ISSUE --body "内容已经同步到：${{github.event.discussion.html_url}}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE: ${{ github.event.issue.html_url }}
