--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -2,8 +2,6 @@ on:
   issues:
     types:
       - opened
-  discussion:
-    types: [created]
 
   workflow_dispatch:
 
@@ -31,25 +29,27 @@ jobs:
   ##################################################
   new-discussion:
     runs-on: ubuntu-latest
-    - run: |
-        gh api -i graphql -f query='
-          mutation {
-            createDiscussion(
-              input: {repositoryId: "R_kgDOG8xRxA", categoryId: "DIC_kwDOG8xRxM4CN9Zd",
-                title: "${{github.event.issue.title}}", body: "具体内容请看：${{github.event.issue.html_url}}"
-              }
-            )
-            {
-              discussion {
-                id
-                number
-                title
+    needs: issue-manager
+    steps:
+      - run: |
+          gh api -i graphql -f query='
+            mutation {
+              createDiscussion(
+                input: {repositoryId: "R_kgDOG8xRxA", categoryId: "DIC_kwDOG8xRxM4CN9Zd",
+                  title: "${{github.event.issue.title}}", body: "具体内容请看：${{github.event.issue.html_url}}"
+                }
+              )
+              {
+                discussion {
+                  id
+                  number
+                  title
+                }
               }
             }
-          }
-          '
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            '
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   issue-reply:
     runs-on: ubuntu-latest
