--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -55,9 +55,9 @@ jobs:
 
   issue-reply:
     runs-on: ubuntu-latest
-    needs: new-discussion
+    # needs: new-discussion
     steps:
-      - run: gh issue comment $ISSUE --body "内容已经同步到：${{github.event.discussion.html_url}}"
+      - run: gh issue comment $ISSUE --body "感谢您提交招聘信息，Rebase 会整理内容，通过公众号发出。"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           ISSUE: ${{ github.event.issue.html_url }}
