--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -27,31 +27,43 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           force: true
-
-  ##################################################
-  new-discussion:
+          
+  push-telegram:
     runs-on: ubuntu-latest
     needs: issue-manager
     steps:
-      - run: |
-          gh api -i graphql -f query='
-            mutation {
-              createDiscussion(
-                input: {repositoryId: "R_kgDOG8xRxA", categoryId: "DIC_kwDOG8xRxM4CN9Zd",
-                  title: "${{github.event.issue.title}}", body: "具体内容请看：${{github.event.issue.html_url}}"
-                }
-              )
-              {
-                discussion {
-                  id
-                  number
-                  title
-                }
-              }
-            }
-            '
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Send to telegram
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            新的活动 ${{github.event.issue.html_url}}          
+
+  ##################################################
+  # new-discussion:
+  #   runs-on: ubuntu-latest
+  #   needs: issue-manager
+  #   steps:
+  #     - run: |
+  #         gh api -i graphql -f query='
+  #           mutation {
+  #             createDiscussion(
+  #               input: {repositoryId: "R_kgDOG8xRxA", categoryId: "DIC_kwDOG8xRxM4CN9Zd",
+  #                 title: "${{github.event.issue.title}}", body: "具体内容请看：${{github.event.issue.html_url}}"
+  #               }
+  #             )
+  #             {
+  #               discussion {
+  #                 id
+  #                 number
+  #                 title
+  #               }
+  #             }
+  #           }
+  #           '
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   issue-reply:
     runs-on: ubuntu-latest
